--- a/css/new_main.css
+++ b/css/new_main.css
@@ -37,6 +37,16 @@ a{
   padding: 0 1rem;
   border-bottom: 1px solid #ddd;
 }
+.local-nav-sticky .local-nav{
+  position: fixed;
+  top: 0;
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: saturate(180%) blur(15px);
+}
+.local-nav-sticky.local-nav-sticky-dark .local-nav .local-nav-links a{
+  color: #000;
+}
+
 
 .global-nav-links,
 .local-nav-links{
@@ -144,7 +154,7 @@ a{
 }
 .canvas-caption{
   max-width: 1000px;
-  margin: 0 auto;
+  margin: -8em 0 auto;
   padding: 0 1rem;
   color: #888;
   font-size: 1.2rem;
@@ -208,6 +218,7 @@ a{
     font-size: 4vw;
   }
   .description{
+    padding: 0;
     font-size: 2rem;
   }
   .description strong{
@@ -230,9 +241,12 @@ a{
     left: 55%;
   }
   .mid-message{
+    padding: 0;
+    width: 1000px;
     font-size: 4vw;
   }
   .canvas-caption{
+    padding: 0;
     font-size: 2rem;
   }
 }
