--- a/css/new_main.css
+++ b/css/new_main.css
@@ -21,7 +21,9 @@ a{
 body.before-load{
   overflow: hidden;
 }
-
+.container{
+  overflow-x: hidden;
+}
 .global-nav{
   z-index: 10;
   position: absolute;
@@ -45,6 +47,10 @@ body.before-load{
   position: fixed;
   top: 0;
   background: rgba(255,255,255,0.1);
+  -webkit-backdrop-filter: saturate(180%) blur(15px);
+  -moz-backdrop-filter: saturate(180%) blur(15px);
+  -o-backdrop-filter: saturate(180%) blur(15px);
+  -ms-backdrop-filter: saturate(180%) blur(15px);
   backdrop-filter: saturate(180%) blur(15px);
 }
 .local-nav-sticky.local-nav-sticky-dark .local-nav .local-nav-links a{
@@ -158,10 +164,13 @@ body.before-load{
 }
 .canvas-caption{
   max-width: 1000px;
-  margin: -8em 0 auto;
+  margin: -24rem 0 auto;
   padding: 0 1rem;
   color: #888;
   font-size: 1.2rem;
+}
+.normal-content .canvas-caption{
+  margin: -24rem auto auto;
 }
 .footer{
   display: flex;
@@ -214,7 +223,13 @@ body.before-load{
   display: block;
   will-change: transform, opacity;
 }
+#scroll-effect-end .sticky-elem{
+  display: none !important;
+}
 
+.before-load .container{
+  display: none;
+}
 .loading{
   display: flex;
   justify-content: center;
@@ -264,6 +279,10 @@ body.before-load{
 }
 
 
+.normal-content{
+  margin-bottom: 10rem;
+}
+
 @media (min-width: 1024px){
   #scroll-section-0 h1{
     font-size: 9vw;
@@ -300,6 +319,7 @@ body.before-load{
     font-size: 4vw;
   }
   .canvas-caption{
+    margin-top: -8rem;
     padding: 0;
     font-size: 2rem;
   }
